SRC/src/main/java/org/example/grammar/Java.g4
grammar Java;
prule: creators;
creators:  seq | alt|  cond | para | loop | choice | seqSeq | repeat  ;
secondaryCreators:delay | sub | cout;
seq: seqoptions;
seqoptions:seqBranch|seqConcur|seqPrime;
sub:'Sub''('(string',')*(string)*','prule')';
delay: 'Wait''('num')';
cout:'Cout''('arg_cout')';
seqPrime:'Seq' twoArguments;
seqBranch:'Seq''('branch ','branchRe')';
seqConcur:'Seq''('concur ','concurRe')';
branch: 'Branch' threeArguments;
branchRe: 'BranchRe' threeArguments;
concur: 'Concur' threeArguments;
concurRe: 'ConcurRe' threeArguments;
cond: 'Cond' fourArguments;
para: 'Para' fourArguments;
loop: 'Loop' fourArguments;
choice: 'Choice' fourArguments;
seqSeq: 'SeqSeq' threeArguments;
repeat: 'Repeat' fourArguments;
alt: 'Alt' threeArguments;
twoArguments : '(' arg_java ',' arg_java ')';
threeArguments : '(' arg_java ',' arg_java ',' arg_java ')';
fourArguments : '(' arg_java ',' arg_java ',' arg_java ',' arg_java ')';
function: CharArray '(' (arg_java',')*(arg_java)* ')';
arg_cout: function | string |special_String | secondaryCreators;
arg_java:  prule | secondaryCreators | function | string |special_String;
special_String:'#'CharArray'#';
num:NumArray;
NumArray: [0-9]+ [0-9]*;
string: CharArray;
CharArray: [a-zA-Z0-9_"]+ [a-zA-Z0-9_;.+{} =!/<>%*?"-]*;
